# lammps-lsp

./: .gitignore  Cargo.toml
.cargo/: config.toml
.github/workflows/: release.yml
scripts/: extract_styles.py
scripts/rst2json/: enrich_sub_keywords.py  rst2json.py
src/: completion.rs  db.rs  diagnostics.rs  hover.rs  main.rs  semantic_tokens.rs
