[package]
name = "lammps-lsp"
version = "0.5.0"
edition = "2021"

[[bin]]
name = "lammps-lsp"
path = "src/main.rs"

[dependencies]
tower-lsp = "0.17"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-std"] }
regex-lite = "0.1"
